--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <h1 class="headline">{{site.title}}</h1>
+
 {% for post in site.posts %}
-<h3><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h3>
+<h3><a href="{{post.url | prepend: site.baseurl}}">{{post.title | titleize_slug}}</a></h3>
 {% endfor %}
